Fix spacing issue on route-content

--- a/app/components/app/styles.scss
+++ b/app/components/app/styles.scss
@@ -33,7 +33,7 @@ body {
 }
 
 .route-content {
-  margin: 61px 325px 0 174px;
+  margin: 61px 330px 0 174px;
   height: 100%;
   min-height: 600px;  
   @include breakpoint(1024px) {
